tests/ui/traits/const-traits/hir-const-check.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/hir-const-check.rs:3:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0658]: `?` is not allowed in a `const fn`
  --> $DIR/hir-const-check.rs:12:9
   |
LL |         Some(())?;
   |         ^^^^^^^^^
   |
   = note: see issue #74935 <https://github.com/rust-lang/rust/issues/74935> for more information
   = help: add `#![feature(const_try)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: using `#![feature(effects)]` without enabling next trait solver globally
   |
   = note: the next trait solver must be enabled globally for the effects feature to work correctly
   = help: use `-Znext-solver` to enable

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
